# iaac-pulumi-gcp

./: .dockerignore  .env  Dockerfile  config.yaml  gcp_pulumi_general.py  main.py  pyproject.toml  setup_pulumi_gcp.sh
operations/: api_gateway_operations.py  cli.py  cloud_run_operations.py  common_operations.py  compute_operations.py  report.py  secrets_manager_operations.py  vertexai_operations.py
pulumi_new/: Pulumi.yaml
